--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@ body {
 }
 #logo {
     color: #f9faf8;
-    size: 24px;
+    font-size: 24px;
     text-decoration: none;
 }
 .pagelinks {
     display: flex;
     justify-content: space-between;
     align-content: space-between;
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+    font: ;
 }
 .Header {
     display: flex;
