--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ body {
     color: #f9faf8;
     font-size: 24px;
     text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
 }
 .pagelinks {
     display: flex;
     justify-content: space-between;
     align-content: space-between;
-    text-decoration: none;
-    color: #e5e7eb;
-    font-size: 18px;
-    font: ;
 }
 .Header {
     display: flex;
     justify-content: space-between;
+}
+.headerlinks{
+    
 }
