--- a/style.css
+++ b/style.css
@@ -17,5 +17,8 @@ body {
     justify-content: space-between;
 }
 .headerlinks{
-    
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
 }
