--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body {
     background-color: #1f2937;
 }
+
+/* HEADER*/
+
 #logo {
     color: #f9faf8;
     font-size: 24px;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
-}
-#pagelinks {
-    display: flex;
-    justify-content: space-between;
-    align-content: space-between;
+    padding-left: 100px;
 }
 .Header {
     display: flex;
@@ -21,4 +20,9 @@ body {
     color: #e5e7eb;
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
+    flex: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
+/**/
