--- a/style.css
+++ b/style.css
@@ -43,7 +43,10 @@ body {
 .item2 {
     width: 440px;
     margin-top: 20px;
-    background-color: rgba(0, 139, 139, 0.226);
+    max-width: 440px;
+    max-height: 320px;
+}
+.item2>img {
     max-width: 440px;
     max-height: 320px;
 }
