Subtext fix + text overall flex fix

--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ body {
 }
 .item1 {
     width: 440px;
+    max-width: 440px;
+    flex: 1;  
+}
+.item1>p {
+    color: #b8b8b8a1;
 }
 #awesome {
     padding-right: 100px;
@@ -51,6 +56,7 @@ body {
     margin-top: 20px;
     max-width: 440px;
     max-height: 320px;
+    flex: 0 1 100%;
 }
 .item2>img {
     max-width: 440px;
