--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
     padding-left: 10px;
+    padding-right: 10px;
     flex: auto;
 }
 
@@ -39,6 +40,7 @@ body {
     margin-top: 100px;
     margin-bottom: 10px;
     color: white;
+    flex-wrap: wrap;
 }
 .item1 {
     width: 440px;
