--- a/style.css
+++ b/style.css
@@ -72,3 +72,14 @@ body {
     max-width: 440px;
     max-height: 320px;
 }
+
+/*itempres*/
+
+.itempres {
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: white;
+    flex-wrap: wrap;
+}
