--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     justify-content: center;
     align-content: center;
     margin-top: 100px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     color: white;
     flex-wrap: wrap;
 }
@@ -82,4 +82,5 @@ body {
     padding-bottom: 100px;
     background-color: white;
     flex-wrap: wrap;
+    width: 2000px;
 }
