--- a/style.css
+++ b/style.css
@@ -82,15 +82,19 @@ body {
     padding-bottom: 100px;
     background-color: white;
     flex-wrap: wrap;
-    width: 2000px;
+    width: auto;
 }
 .inf {
     display: flex;
     flex-direction: column;
+    max-width: 200px;
+    padding: 10px;
 }
 .blue-box {
-    border-color: #3882f6;
     border-radius: 10%;
     height: 100px;
-    width: 100px;
+    width: 170px;
+    padding-left: 15px;
+    border: 2px solid #3882f6;
+    padding-bottom: 10px;
 }
