--- a/style.css
+++ b/style.css
@@ -123,3 +123,11 @@ body {
     display: flex;
     justify-content: center;
 }
+#bigbluebox {
+    border: 2px solid #3882f6;
+    border-radius: 10%;
+    background-color: #3882f6;
+    color: #cfd1d4;
+    display: flex;
+    justify-content: space-between;
+}
