--- a/style.css
+++ b/style.css
@@ -122,7 +122,9 @@ body {
 .bigsignup {
     display: flex;
     justify-content: center;
-    background-color: #cfd1d4;
+    background-color: #f8fbff;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 #bigbluebox {
     border: 2px solid #3882f6;
