--- a/style.css
+++ b/style.css
@@ -134,6 +134,24 @@ body {
     display: flex;
     justify-content: space-between;
 }
+#textblock {
+    padding-left: 50px;
+    font-size: smaller;
+}
 #textblock>p {
     color: #d1cbcbbe;
+}
+#secsignup {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-left:40px;
+    padding-right: 20px;
+}
+#secsignup>button {
+    color: #f8fbff;
+    background-color: #3882f6;
+    border: 1px solid #f9faf8;
+    border-radius:  10%
 }
