--- a/style.css
+++ b/style.css
@@ -155,3 +155,11 @@ body {
     border: 1px solid #f9faf8;
     border-radius:  10%
 }
+
+/*footer*/
+.footer {
+    color: #cfd1d4;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+}
